--- a/index.html
+++ b/index.html
@@ -3,14 +3,165 @@
 
 <head>
   <title>Amir Panahi</title>
-  <style>
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this
-    <strong>p</strong> tag and its contents.
-  </p>
+  <div class="container">
+    <div class="header">
+      <span>Hi, I'm <strong>Amir</strong></span>
+      <ul>
+        <li><a href="https://github.com/amirrezapanahi">Github</a></li>
+        <li><a href="">LinkedIn</a></li>
+        <li><a>Email</a></li>
+      </ul>
+    </div>
+    <p>
+      I'm a full-stack software engineer blending UX/UI design, Machine Learning, and System Design to create solutions
+      that genuinely help people. Love to grapple, make music and build startups in my free time.
+    </p>
+    <div class="flex">
+      <span>I build <strong>front-ends</strong> with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">React</a></span>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1024px-React-icon.svg.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Javascript</a></span>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/768px-JavaScript-logo.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Typescript</a></span>
+          <img src="https://static-00.iconduck.com/assets.00/typescript-icon-icon-1024x1024-vh3pfez8.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Vite</a></span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Vitejs-logo.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I build <strong>back-ends</strong> with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">GO</a></span>
+          <img style="width: 2.5em" src="https://go.dev/blog/go-brand/Go-Logo/PNG/Go-Logo_Blue.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Node.js</a></span>
+          <img src="https://cdn-icons-png.flaticon.com/512/5968/5968322.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Drizzle</a></span>
+          <img src="https://pbs.twimg.com/profile_images/1710017636166193152/7aUeiYMx_400x400.jpg" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">C#</a></span>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Logo_C_sharp.svg/1820px-Logo_C_sharp.svg.png" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>persist data</strong> with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">PostgreSQL</a></span>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Postgresql_elephant.svg/1985px-Postgresql_elephant.svg.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">IndexedDB</a></span>
+          <img src="https://cdn-images-1.medium.com/v2/resize:fit:1200/1*hn1zhIHmqTj6_LTZ4vzZSQ.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Redis</a></span>
+          <img src="https://www.svgrepo.com/show/303460/redis-logo.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>test</strong> software with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Vitest</a></span>
+          <img src="https://vitest.dev/logo.svg" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Jest</a></span>
+          <img src="https://cdn.freebiesupply.com/logos/large/2x/jest-logo-png-transparent.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Cypress</a></span>
+          <img style="width: 3em;" src="https://www.cypress.io/images/layouts/cypress-logo.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>manage</strong> software with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Docker</a></span>
+          <img src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/97_Docker_logo_logos-512.png" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>deploy</strong> and <strong>monitor</strong> software with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Vercel</a></span>
+          <img
+            src="https://static.wikia.nocookie.net/logopedia/images/a/a7/Vercel_favicon.svg/revision/latest?cb=20221026155821" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Github</a></span>
+          <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Azure</a></span>
+          <img src="https://swimburger.net/media/ppnn3pcl/azure.png" />
+        </div>
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Azure DevOps</a></span>
+          <img src="https://cdn.iconscout.com/icon/free/png-256/free-azure-devops-3628645-3029870.png?f=webp" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>collaborate</strong> on software with:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Jira</a></span>
+          <img src="https://cdn.worldvectorlogo.com/logos/jira-1.svg" />
+        </div>
+      </div>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Notion</a></span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Notion_app_logo.png" />
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+      <span>I <strong>write</strong> software in:</span>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Linux</a></span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1200px-Tux.svg.png" />
+        </div>
+      </div>
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Vim</a></span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Vimlogo.svg/1022px-Vimlogo.svg.png" />
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
