new vercel logo

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="tooltip">
           <span class="tooltiptext"><a href="">Vercel</a></span>
           <img
-            src="https://static.wikia.nocookie.net/logopedia/images/a/a7/Vercel_favicon.svg/revision/latest?cb=20221026155821" />
+            src="https://static.wikia.nocookie.net/logopedia/images/a/a7/Vercel_favicon.svg/revision/latest?cb=20221026155821.png" />
         </div>
         <div class="tooltip">
           <span class="tooltiptext"><a href="">Github</a></span>
