new vercel logo

--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
       <div class="images">
         <div class="tooltip">
           <span class="tooltiptext"><a href="">Vercel</a></span>
-          <img
-            src="https://static.wikia.nocookie.net/logopedia/images/a/a7/Vercel_favicon.svg/revision/latest?cb=20221026155821.png" />
+          <img src="https://www.svgrepo.com/show/327408/logo-vercel.svg" />
         </div>
         <div class="tooltip">
           <span class="tooltiptext"><a href="">Github</a></span>
