added books i love

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       I'm a full-stack software engineer blending UX/UI design, Machine Learning, and System Design to create solutions
       that genuinely help people. Love to grapple, make music and build startups in my free time.
     </p>
+    <span>Tech Stack</span>
+    </br>
+    <span>----------</span>
     <div class="flex">
       <span>I build <strong>front-ends</strong> with:</span>
       <div class="images">
@@ -159,6 +162,27 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Vimlogo.svg/1022px-Vimlogo.svg.png" />
         </div>
       </div>
+    </div>
+    <span>Books I Love</span>
+    </br>
+    <span>------------</span>
+    <div class="flex">
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Structure and Interpretation of Computer Programs</a></span>
+          <img class="book" src="https://m.media-amazon.com/images/I/71noXgc3kgL._AC_UF894,1000_QL80_.jpg" />
+        </div>
+      </div>
+      <span>Structure and Interpretation of Computer Programs</span>
+    </div>
+    <div class="flex">
+      <div class="images">
+        <div class="tooltip">
+          <span class="tooltiptext"><a href="">Domain Modelling made Functional</a></span>
+          <img class="book domain" src="https://m.media-amazon.com/images/I/91THtohxBjL._AC_UF894,1000_QL80_.jpg" />
+        </div>
+      </div>
+      <span>Domain Modelling made Functional</span>
     </div>
   </div>
 </body>
